# IT-projects

APRO/apro1_22z_ciszkiewicz_stanislaw-main/lab3/: Factorial.java  Race.java
APRO/apro1_22z_ciszkiewicz_stanislaw-main/lab4/: Equation.java  Palindrome.java  maszyny.java
APRO/apro1_22z_ciszkiewicz_stanislaw-main/lab5/: Fabryka.java  Palindrome.java
APRO/apro1_22z_ciszkiewicz_stanislaw-main/lab6/: Palindrome.java  ShortCircuitOperators.java  WritePalindrome.java  sprawozdanie
APRO/apro1_22z_ciszkiewicz_stanislaw-main/lab7/: Person.java  Student.java  Teacher.java
APRO/apro1_22z_pro_sdscmk-main/: Projekt_APRO_prezentacja.pptx  README.md  pom.xml
BADA/: Logical-model.txl  Model-logiczny.txp
BADA/bada-cz.2/: pom.xml
BDAN/JH/: pom.xml
BDAN/biblioteki kryptograficzne/: BDAN_biblioteki_kryptograficzne.pptx
BDAN/cryptool/: Cryptool - Projekt1.docx  tabelki bdan cryptool.xlsx
BSO/: delete_scan.py  docker-compose.yml  modify_scan.py  network.py  new_scan.py  reports.py  scanner_app.py  scanner_func.py
SCHT/lab1/testy/: index.html.1  raFAL.py  (+119 more)
SCHT/lab2/: controller.py
SYKOM/Cnauka/: CMakeLists.txt
SYKOM/Cnauka/chapter1,2/: celsiusFahr.c  celsiusFahrMod.c
SYKOM/Cnauka/chapter1,3/: celsiusFahr1.5.c
SYKOM/Cnauka/chapter1,5/: blanksReplace.c  copy.c  countBlanksTabsNewlines.c  countCharacters.c  countLines.c  replaceTabsBackspaceBackslash.cpp  wordCounting.c
SYKOM/Cnauka/chapter1,6/: arraysHistogramHorizontal.c  frequenciesofCharactersHist.c
SYKOM/Cnauka/chapter1,7/: celsiusFahrFunction.c
SYKOM/Cnauka/chapter1,9/: longestLine.c  longestLine80.c
(+113 files in other folders)
