cmake_minimum_required(VERSION 3.27)
project(Cnauka)

set(CMAKE_CXX_STANDARD 17)

add_executable(Cnauka main.cpp)
add_executable(Chapter1CF chapter1,2/celsiusFahr.c)
add_executable(Chapter1CFMod chapter1,2/celsiusFahrMod.c)
add_executable(Chapter1CFFor chapter1,3/celsiusFahr1.5.c)
add_executable(Copy chapter1,5/copy.c)
add_executable(CountCharacters chapter1,5/countCharacters.c)
add_executable(CountLines chapter1,5/countLines.c)
add_executable(CountBlanksTabsNewlines chapter1,5/countBlanksTabsNewlines.c)
add_executable(BlanksReplace chapter1,5/blanksReplace.c)
add_executable(ReplaceTabsBackspaceBackslash chapter1,5/replaceTabsBackspaceBackslash.cpp)
add_executable(WordCounting chapter1,5/wordCounting.c)
add_executable(ArraysHistogramHorizontal chapter1,6/arraysHistogramHorizontal.c)
add_executable(FrequenciesofCharactersHist chapter1,6/frequenciesofCharactersHist.c)
add_executable(CelsiusFahrFunction chapter1,7/celsiusFahrFunction.c)
add_executable(LongestLine chapter1,9/longestLine.c)
add_executable(LongestLine80 chapter1,9/longestLine80.c)
